[gd_scene load_steps=4 format=3 uid="uid://dk8qnoorkrwka"]

[ext_resource type="Script" path="res://Scene/levels/level.gd" id="1_0frj8"]
[ext_resource type="PackedScene" uid="uid://by7uflitd8ky6" path="res://Scene/user interf/ui.tscn" id="3_0adu8"]
[ext_resource type="PackedScene" uid="uid://o0d7k03yspt4" path="res://Scene/player/player.tscn" id="3_hia4e"]

[node name="Level" type="Node2D"]
script = ExtResource("1_0frj8")

[node name="Ground" type="Node2D" parent="."]

[node name="Projectile" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("3_hia4e")]
position = Vector2(401, 473)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.4, 0.4)

[node name="Lights" type="Node2D" parent="."]

[node name="UI" parent="." instance=ExtResource("3_0adu8")]

[connection signal="grenade" from="Player" to="." method="_on_player_grenade"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="update_stat" from="Player" to="." method="_on_player_update_stat"]
